// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`ModelCellCurrency > formats a negative number 1`] = `
<DocumentFragment>
  <div>
    -$15.00
  </div>
</DocumentFragment>
`;

exports[`ModelCellCurrency > formats a positive number 1`] = `
<DocumentFragment>
  <div>
    $20.00
  </div>
</DocumentFragment>
`;

exports[`ModelCellCurrency > should render the component with className from inherited props 1`] = `
<DocumentFragment>
  <div
    class="dummy-class"
  >
    baz
  </div>
</DocumentFragment>
`;

exports[`ModelCellCurrency > should render the empty text when value is nullish 1`] = `
<DocumentFragment>
  <div>
    -
  </div>
</DocumentFragment>
`;

exports[`ModelCellCurrency > should render the overridden empty text when value is nullish 1`] = `
<DocumentFragment>
  <div>
    baz
  </div>
</DocumentFragment>
`;

exports[`ModelCellCurrency > should render with global override shorthand 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellCurrency > should render with global override shorthand for model 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;

exports[`ModelCellCurrency > should render with global override shorthand for model and attribute 1`] = `
<DocumentFragment>
  <div>
    Bar
  </div>
</DocumentFragment>
`;
